objects/LoginData__c.object
<CustomObject>
    <fields>
        <fullName>InstanceURL__c</fullName>
        <label>InstanceURL</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <label>UserEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UserPassword__c</fullName>
        <label>UserPassword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LoginData</label>
    <nameField>
        <label>LoginData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoginDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>